@@ -12,6 +12,7 @@ import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class PythonInvoker {
 
@@ -34,7 +35,11 @@ public class PythonInvoker {
                 throw new ApiException("Function parameters not found.");
             }
             if (args.length < parameters.size()) {
-                List<String> names = parameters.stream().skip(args.length).map(FunctionParameterInfo::getName).toList();
+                List<String> names = parameters
+                    .stream()
+                    .skip(args.length)
+                    .map(FunctionParameterInfo::getName)
+                    .collect(Collectors.toList());
                 throw new ApiException(
                     "Not enough parameters provided: " + args.length + ", expected: " + parameters.size() + ", missing: " + names);
             }
